--- a/aero/notes.html
+++ b/aero/notes.html
@@ -10,7 +10,7 @@
     <meta name="description" content="delia stephens">
     <meta name="author" content="Delia Stephens">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="../css/styles.css?v=1.0">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -24,16 +24,16 @@
       </h1>
       <div class="nav"
         <ul id="nav-buttons">
-          <li><a href="visual.html">visual</a></li>
+          <li><a href="../visual/visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
           <li><a href="aero.html">aero/astro</a></li>
-          <li><a href="projects.html">other</a></li>
+          <li><a href="../projects.html">other</a></li>
         </ul>
       </div>
     </div>
     <div class="body">
       <div class="header-img">
-        <img src="res/notes/stresses.PNG" alt="Notes" class="overview">
+        <img src="../res/notes/stresses.PNG" alt="Notes" class="overview">
       </div>
       <p>
         As a student, my first priority is my school work.
@@ -53,28 +53,28 @@
         For each of these classes, I take extensive notes.
       </p>
       <p class="single">
-        <a href="docs/fluids-summary.pdf"> Fluid Dynamics (16.003)</a>
+        <a href="../docs/fluids-summary.pdf"> Fluid Dynamics (16.003)</a>
       </p>
       <p class="single">
-        <a href="docs/thermo-summary.pdf"> Thermodynamics & Propulsion (16.004)</a>
+        <a href="../docs/thermo-summary.pdf"> Thermodynamics & Propulsion (16.004)</a>
       </p>
       <p class="single">
-        <a href="docs/materials-unit-1.pdf"> Materials & Structures (16.001), Unit 1 </a>
+        <a href="../docs/materials-unit-1.pdf"> Materials & Structures (16.001), Unit 1 </a>
       </p>
       <p class="single">
-        <a href="docs/materials-unit-2.pdf"> Materials & Structures (16.001), Unit 2 </a>
+        <a href="../docs/materials-unit-2.pdf"> Materials & Structures (16.001), Unit 2 </a>
       </p>
       <p class="single">
-        <a href="docs/signals-summary.pdf"> Signals & Systems (16.002) </a>
+        <a href="../docs/signals-summary.pdf"> Signals & Systems (16.002) </a>
       </p>
       <p class="single">
-        <a href="docs/diff-eq.pdf"> Differential Equations (18.03) </a>
+        <a href="../docs/diff-eq.pdf"> Differential Equations (18.03) </a>
       </p>
       <p class="single">
-        <a href="docs/bio-summary.pdf"> Biology (7.013) </a>
+        <a href="../docs/bio-summary.pdf"> Biology (7.013) </a>
       </p>
       <p class="single">
-        <a href="docs/chem-summary.pdf"> Chemistry (3.091) </a>
+        <a href="../docs/chem-summary.pdf"> Chemistry (3.091) </a>
       </p>
     </div>
   </body>
