--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </h1>
       <div class="nav>"
         <ul id="nav-buttons">
-          <li><a href="visual.html">visual</a></li>
+          <li><a href="visual/visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="aero.html">aero/astro</a></li>
+          <li><a href="aero/aero.html">aero/astro</a></li>
           <li><a href="projects.html">other</a></li>
         </ul>
       </div>
