--- a/visual/visual.html
+++ b/visual/visual.html
@@ -12,7 +12,7 @@
     <meta name="description" content="delia stephens">
     <meta name="author" content="Delia Stephens">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="../css/styles.css?v=1.0">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -28,61 +28,59 @@
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="aero.html">aero/astro</a></li>
-          <li><a href="projects.html">other</a></li>
+          <li><a href="../aero/aero.html">aero/astro</a></li>
+          <li><a href="../projects.html">other</a></li>
         </ul>
       </div>
     </div>
     <div class="body">
       <section class="projects">
         <div class="img-container">
-          <a class="visual-link" href="sitl.html">
-            <img src="https://github.com/deliastephens/FaultInjector/blob/master/res/FaultInjector.PNG?raw=true" alt="FaultInjector"/>
+          <a class="visual-link" href="boston.html">
+            <img src="../res/boston/citgo-crop.jpg" alt="boston, from the balcony"/>
             <div class="middle">
               <div class="text">
                 <h1 class="project-title">
-                  FaultInjector 2.0
+                    boston
                 </h1>
-                <p class="project-description">development of a robust SITL UAV testing environment</p>
+                <p class="project-description">views from the balcony (and others)</p>
               </div>
             </div>
           </a>
         </div>
         <div class="img-container">
-          <a class="visual-link" href="maja.html">
-            <img src="res/maja/materials.PNG" alt="Bormatec MAJA Project"/>
+          <a class="visual-link" href="technical.html">
+            <img src="../res/technical/BMW-Crop-2.png" alt="my dad's motorcycle"/>
             <div class="middle">
               <div class="text">
                 <h1 class="project-title">
-                  modeling MAJA
+                    technical
                 </h1>
-                <p class="project-description">building a custom drone model for PhoenixRC</p>
+                <p class="project-description">some drawings and designs i've done</p>
               </div>
             </div>
           </a>
         </div>
         <div class="img-container">
-          <a class="visual-link" href="notes.html">
-            <img src="res/notes/overview.png" alt="notes i've taken"/>
+          <a class="visual-link" href="atx.html">
+            <img src="../res/atx/P1060414.jpg" alt="atx skyline"/>
             <div class="middle">
               <div class="text">
-                <h1 class="project-title">
-                    notes
-                </h1>
-                <p class="project-description">how i start to understand things</p>
+                <h1 class="project-title">atx</h1>
+                <p class="project-description">photos from the city i grew up in</p>
               </div>
             </div>
           </a>
         </div>
         <div class="img-container">
-          <a class="visual-link" href="cameroc.html">
-            <img src="res/cameroc/rocket_launch.jpg" alt="rocket in flight"/>
+          <a class="visual-link" href="wexas.html">
+            <img src="../res/marfa/P1060080.jpg" alt="prada building"/>
             <div class="middle">
               <div class="text">
                 <h1 class="project-title">
-                    cameroc
+                    wexas
                 </h1>
-                <p class="project-description">cluster D-motor rocket to launch a GoPro</p>
+                <p class="project-description">adventures in west texas</p>
               </div>
             </div>
           </a>
