--- a/aero/cameroc.html
+++ b/aero/cameroc.html
@@ -10,7 +10,7 @@
     <meta name="description" content="delia stephens">
     <meta name="author" content="Delia Stephens">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="../css/styles.css?v=1.0">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -26,7 +26,7 @@
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="aero.html">aero/astro</a></li>
+          <li><a href="../aero.html">aero/astro</a></li>
           <li><a href="projects.html">other</a></li>
         </ul>
       </div>
