--- a/visual/technical.html
+++ b/visual/technical.html
@@ -12,7 +12,7 @@
     <meta name="description" content="delia stephens">
     <meta name="author" content="Delia Stephens">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="../css/styles.css?v=1.0">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -28,8 +28,8 @@
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="aero.html">aero/astro</a></li>
-          <li><a href="projects.html">other</a></li>
+          <li><a href="../aero/aero.html">aero/astro</a></li>
+          <li><a href="../projects.html">other</a></li>
         </ul>
       </div>
     </div>
@@ -43,9 +43,9 @@
         </p>
       </div>
       <section class="atx-photos">
-        <a href="res/technical/BMW-Crop-2.png"><img src="res/technical/BMW-Crop-2.png" alt="skyline"/></a>
-        <a href="res/technical/Cessna-Crop-2.png"><img src="res/technical/Cessna-Crop-2.png" alt="img"/>
-        <a href="res/technical/MG-Crop-2.png"><img src="res/technical/MG-Crop-2.png" alt="img"/>
+        <a href="../res/technical/BMW-Crop-2.png"><img src="../res/technical/BMW-Crop-2.png" alt="skyline"/></a>
+        <a href="../res/technical/Cessna-Crop-2.png"><img src="../res/technical/Cessna-Crop-2.png" alt="img"/>
+        <a href="../res/technical/MG-Crop-2.png"><img src="../res/technical/MG-Crop-2.png" alt="img"/>
       </section>
     </div>
   </body>
