--- a/visual/boston.html
+++ b/visual/boston.html
@@ -45,10 +45,11 @@
         <a href="../res/boston/P9220007.jpg"><img src="../res/boston/P9220007.jpg" alt="img"/></a>
         <a href="../res/boston/P9220009.jpg"><img src="../res/boston/P9220009.jpg" alt="img"/></a>
         <a href="../res/boston/P9220012.jpg"><img src="../res/boston/P9220012.jpg" alt="img"/></a>
-        <a href="../res/boston/P9220014.jpg"><img src="../res/boston/P92200014.jpg" alt="img"/></a>
+        <a href="../res/boston/P9220014.jpg"><img src="../res/boston/P9220014.jpg" alt="img"/></a>
         <a href="../res/boston/P9220016.jpg"><img src="../res/boston/P9220016.jpg" alt="img"/></a>
         <a href="../res/boston/P9220019.jpg"><img src="../res/boston/P9220019.jpg" alt="img"/></a>
         <a href="../res/boston/P9220023.jpg"><img src="../res/boston/P9220023.jpg" alt="img"/></a>
+        <a href="../res/boston/Snapchat-1957441103.jpg"><img src="../res/boston/Snapchat-1957441103.jpg" alt="img"/></a>
         <a href="../res/boston/IMG_20180501_161142.jpg"><img src="../res/boston/IMG_20180501_161142.jpg" alt="img"/></a>
         <a href="../res/boston/IMG_20180912_210628.jpg"><img src="../res/boston/IMG_20180912_210628.jpg" alt="img"/></a>
         <a href="../res/boston/IMG_20181209_221124.jpg"><img src="../res/boston/IMG_20181209_221124.jpg" alt="img"/></a>
