--- a/aero/maja.html
+++ b/aero/maja.html
@@ -20,7 +20,7 @@
   <body>
     <div class="header">
       <h1 id="blog-title">
-        <a href="index.html">delia stephens</a>
+        <a href="../index.html">delia stephens</a>
       </h1>
       <div class="nav"
         <ul id="nav-buttons">
@@ -38,7 +38,7 @@
       <img class="inline" src="res/maja/materials.PNG" align="right" height="300px">
       <p>
         This summer, while working at
-        <a href="https://www.cicataqro.ipn.mx/cq/qro/Paginas/index.html">CICATA</a>,
+        <a href="https://www.cicataqro.ipn.mx/cq/qro/Paginas/../index.html">CICATA</a>,
         I was tasked with desiging a flight program to train people on the
         <a href="https://www.bormatec.com/produkte">Bormatec MAJA</a>, a long-range UAV designed to
         hold large payloads for aerial surveillance. In addition to desiging checklists and flight logs,
