--- a/visual/visual.html
+++ b/visual/visual.html
@@ -22,7 +22,7 @@
   <body>
     <div class="header">
       <h1 id="blog-title">
-        <a href="index.html">delia stephens</a>
+        <a href="../index.html">delia stephens</a>
       </h1>
       <div class="nav>"
         <ul id="nav-buttons">
