fixing broken links

--- a/aero/cameroc.html
+++ b/aero/cameroc.html
@@ -24,10 +24,10 @@
       </h1>
       <div class="nav"
         <ul id="nav-buttons">
-          <li><a href="visual.html">visual</a></li>
+          <li><a href="../visual/visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="../aero.html">aero/astro</a></li>
-          <li><a href="projects.html">other</a></li>
+          <li><a href="aero.html">aero/astro</a></li>
+          <li><a href="../projects.html">other</a></li>
         </ul>
       </div>
     </div>
@@ -53,7 +53,7 @@
         I had some changes to make.
       </p>
       <div class="small-img">
-        <img src="res/cameroc/crashed_rocket.jpg" alt="Rocket Launch">
+        <img src="../res/cameroc/crashed_rocket.jpg" alt="Rocket Launch">
       </div>
       <p>
         The second time around, I decided to do things properly. I drew up my rocket, measured the GoPro, and produced a scale drawing before
@@ -64,16 +64,16 @@
         Below are some of the notes, designs, etc. for this rocket. I spent a long time iterating, going through even more designs than are available here.
       </p>
       <div class="extra-small-img">
-        <img src="res/cameroc/design-process-1.PNG" alt="Thoughts about design">
+        <img src="../res/cameroc/design-process-1.PNG" alt="Thoughts about design">
       </div>
       <div class="extra-small-img">
-        <img src="res/cameroc/design-process-2.PNG" alt="more thoughts">
+        <img src="../res/cameroc/design-process-2.PNG" alt="more thoughts">
       </div>
       <div class="extra-small-img">
-        <img src="res/cameroc/motor-housing-1.PNG" alt="motor housing">
+        <img src="../res/cameroc/motor-housing-1.PNG" alt="motor housing">
       </div>
       <div class="extra-small-img">
-        <img src="res/cameroc/motor-housing-2.PNG" alt="motor housing">
+        <img src="../res/cameroc/motor-housing-2.PNG" alt="motor housing">
       </div>
     </div>
   </body>
