--- a/aero/maja.html
+++ b/aero/maja.html
@@ -24,10 +24,10 @@
       </h1>
       <div class="nav"
         <ul id="nav-buttons">
-          <li><a href="visual.html">visual</a></li>
+          <li><a href="../visual/visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="../aero.html">aero/astro</a></li>
-          <li><a href="projects.html">other</a></li>
+          <li><a href="aero.html">aero/astro</a></li>
+          <li><a href="../projects.html">other</a></li>
         </ul>
       </div>
     </div>
@@ -67,11 +67,11 @@
         my model into Blender to create meshes that PhoenixBuilder would understand.
       </p>
       <section class="atx-photos">
-        <a href="res/maja/assembly2.PNG"><img src="res/maja/assembly2.PNG" alt="img"/></a>
-        <a href="res/maja/wing1.PNG"><img src="res/maja/wing1.PNG" alt="skyline"/></a>
-        <a href="res/maja/body1.PNG"><img src="res/maja/body1.PNG" alt="img"/></a>
-        <a href="res/maja/hozstab1.PNG"><img src="res/maja/hozstab1.PNG" alt="img"/></a>
-        <a href="res/maja/propmotor1.PNG"><img src="res/maja/propmotor1.PNG" alt="img"/></a>
+        <a href="../res/maja/assembly2.PNG"><img src="../res/maja/assembly2.PNG" alt="img"/></a>
+        <a href="../res/maja/wing1.PNG"><img src="../res/maja/wing1.PNG" alt="skyline"/></a>
+        <a href="../res/maja/body1.PNG"><img src="../res/maja/body1.PNG" alt="img"/></a>
+        <a href="../res/maja/hozstab1.PNG"><img src="../res/maja/hozstab1.PNG" alt="img"/></a>
+        <a href="../res/maja/propmotor1.PNG"><img src="../res/maja/propmotor1.PNG" alt="img"/></a>
       </section>
       <p>
         Perhaps unsurprisingly, I ran into lots of scaling issues, and I ended up with an untextured model in PhoenixBuilder,
@@ -89,7 +89,7 @@
         painless process, and I was able to get my completed model from Blender to Phoenix in a matter of hours.
       </p>
       <div class="small-img">
-        <a href="res/maja/phoenix_builder.png"><img src="res/maja/phoenix_builder.png" alt="img"/></a>
+        <a href="../res/maja/phoenix_builder.png"><img src="../res/maja/phoenix_builder.png" alt="img"/></a>
       </div>
       <p>
         The rest of the battle came down to tuning; even though I had done a decent job scaling the aircraft,
@@ -99,7 +99,7 @@
         see simulated instability, and was able to see a project through to completion.
       </p>
       <div class="small-img">
-        <a href="res/maja/phoenixRC.png"><img src="res/maja/phoenixRC.png" alt="img"/></a>
+        <a href="../res/maja/phoenixRC.png"><img src="../res/maja/phoenixRC.png" alt="img"/></a>
       </div>
     </div>
   </body>
