--- a/aero/sitl.html
+++ b/aero/sitl.html
@@ -24,10 +24,10 @@
       </h1>
       <div class="nav"
         <ul id="nav-buttons">
-          <li><a href="visual.html">visual</a></li>
+          <li><a href="../visual/visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="../aero.html">aero/astro</a></li>
-          <li><a href="projects.html">other</a></li>
+          <li><a href="aero.html">aero/astro</a></li>
+          <li><a href="../projects.html">other</a></li>
         </ul>
       </div>
     </div>
@@ -73,10 +73,10 @@
         available <a href="https://gist.github.com/deliastephens/6eb3fb3111f5d854bb240c7649847c1f">here</a>.
       </p>
       <section class="atx-photos">
-        <a href="res/maja/assembly2.PNG"><img src="res/sitl/flying_mission.PNG" alt="img"/></a>
-        <a href="res/maja/wing1.PNG"><img src="res/sitl/mission_disarmed.PNG" alt="skyline"/></a>
-        <a href="res/maja/body1.PNG"><img src="res/sitl/mission_rtl.PNG" alt="img"/></a>
-        <a href="res/maja/hozstab1.PNG"><img src="res/sitl/flight_gif.gif" alt="img"/></a>
+        <a href="../res/maja/assembly2.PNG"><img src="../res/sitl/flying_mission.PNG" alt="img"/></a>
+        <a href="../res/maja/wing1.PNG"><img src="../res/sitl/mission_disarmed.PNG" alt="skyline"/></a>
+        <a href="../res/maja/body1.PNG"><img src="../res/sitl/mission_rtl.PNG" alt="img"/></a>
+        <a href="../res/maja/hozstab1.PNG"><img src="../res/sitl/flight_gif.gif" alt="img"/></a>
       </section>
       <p>
         I eventually ended up with a FlightGear visualization connected to my instance of JSBSim. It received
