--- a/visual/boston.html
+++ b/visual/boston.html
@@ -49,6 +49,7 @@
         <a href="../res/boston/P9220016.jpg"><img src="../res/boston/P9220016.jpg" alt="img"/></a>
         <a href="../res/boston/P9220019.jpg"><img src="../res/boston/P9220019.jpg" alt="img"/></a>
         <a href="../res/boston/P9220023.jpg"><img src="../res/boston/P9220023.jpg" alt="img"/></a>
+        <a href="../res/boston/IMG_20200315_065355-2.jpg"><img src="../res/boston/IMG_20200315_065355-2.jpg" alt="img"/></a>
         <a href="../res/boston/Snapchat-1957441103.jpg"><img src="../res/boston/Snapchat-1957441103.jpg" alt="img"/></a>
         <a href="../res/boston/IMG_20180501_161142.jpg"><img src="../res/boston/IMG_20180501_161142.jpg" alt="img"/></a>
         <a href="../res/boston/IMG_20180912_210628.jpg"><img src="../res/boston/IMG_20180912_210628.jpg" alt="img"/></a>
